<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.james.a1shakedetector.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_below="@id/textView1"
        android:layout_alignStart="@id/textView1"
        android:layout_alignLeft="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView2"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_below="@id/textView2"
        android:layout_alignStart="@id/textView1"
        android:layout_alignLeft="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView3"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_below="@id/textView3"
        android:layout_alignStart="@id/textView1"
        android:layout_alignLeft="@id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView4"/>

    <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:layout_below="@id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textView1"
        android:layout_alignLeft="@id/textView1"
        android:layout_below="@id/edit_message"
        android:text="@string/button_one"
        android:onClick="showMessage" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView1"
        android:layout_below="@id/button_one"
        android:text="@string/button_two"
        android:onClick="showMessage" />

</RelativeLayout>
